# The-Evolution-of-Todo

./: README.md  constitution.md  pyproject.toml
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/general/: 4-todo-cli-implementation-contract.general.prompt.md
history/prompts/plan/: 2-todo-cli-implementation-plan.plan.prompt.md
history/prompts/spec/: 1-todo-cli-spec.spec.prompt.md
history/prompts/tasks/: 3-todo-cli-task-breakdown.tasks.prompt.md
specs/todo-cli/: implementation.md  plan.md  spec.md  tasks.md
src/: config.py  main.py
src/auth/: authenticator.py
src/cli/: greetings.py  menu.py  prompt.py
src/tasks/: models.py  repository.py  service.py
src/utils/: intent_parser.py
